<b>Version 1.20 Beta 2:</b><br/><br/>
    &#8226; Real URL's on profiles<br/>
    &#8226; Fixed 7 in tablet mode<br/>
    &#8226; Attempted some fixes for uploading large images<br/>
<br/><br/>

<b>Version 1.20 Beta 1:</b><br/><br/>
    &#8226; Color option for custom themes<br/>
    &#8226; In-line twitpic pictures<br/>
    &#8226; In-line imgur pictures<br/>
    &#8226; No more jumping on the timeline<br/>
    &#8226; 7 in tablet layout also used in landscape on phones<br/>
    &#8226; Roboto Condensed font option<br/>
    &#8226; View users locations, websites, and following status on user profiles<br/>
    &#8226; Get more search results<br/>
    &#8226; Option to open to in app browser on tweets that contain websites<br/>
    &#8226; Use twitter's automatic link shortening<br/>
    &#8226; Got rid of the zoom button in the in app browser<br/>
    &#8226; Fixes for widget<br/>
    &#8226; Italian and French translations<br/>
<br/><br/>

<b>Version 1.13:</b><br/><br/>
    &#8226; Threaded direct messages<br/>
    &#8226; Fill gaps in the timeline from Sync settings<br/>
    &#8226; Theme fixes<br/>
<br/><br/>

<b>Version 1.11:</b><br/><br/>
    &#8226; Threaded direct messages<br/>
    &#8226; Fixes for duplicates - If it does happen, go to advanced settings then clean timeline<br/>
    &#8226; Fix user names not always being highlighted<br/>
    &#8226; More changes/fixes for the toast bar<br/>
    &#8226; Lots of other random fixes and crash reports<br/>
<br/><br/>

<b>Version 1.10 Beta 3:</b><br/><br/>
    &#8226; Much better refreshing of mentions from the main timeline<br/>
    &#8226; "To first" button added in the action bar if you disable the toast<br/>
    &#8226; Mute hashtags from the overflow menu on a tweet<br/>
    &#8226; Option to ignore all retweets on your timeline<br/>
    &#8226; Fix for night mode when it starts after midnight<br/>
    &#8226; Better widget updating<br/>